shrink desktop body height to 99% to try to prevent annoying barely there overflow; fix missed templating if that caused scroll wheel and keyboard shortcuts to not work

--- a/scripts/base.css
+++ b/scripts/base.css
@@ -597,8 +597,8 @@
         grid-template-areas:
             "toolbar main right"
             "plotRibbonBox plotRibbonBox right";
-        height: 100%;
-        max-height: 100%;
+        height: 99%;
+        max-height: 99%;
         row-gap: 10px;
     }
 
@@ -740,7 +740,7 @@
 body {
     background-color: #999999;
     color: #000000;
-    height: 100%;
+    height: 99%;
     width: 100%;
     display: block;
 }
